finalize adding services, function and filtering

--- a/helloWorld.html
+++ b/helloWorld.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="">
   <head>
     <meta charset="utf-8">
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
   </head>
   <body>
-    <div ng-app="" ng-init="message = 'Hello World'">
+    <div ng-init="message = 'Hello World'">
       <h1>{{message}}</h1>
+    </div>
+
+    <div  ng-init="mess='Hello World'">
+      <h1>{{mess}}</h1>
     </div>
   </body>
 </html>
