--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
+      <meta charset="utf-8">
+      <title>Hello World</title>
+      <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
+      <script src="js/app.js"></script>
+      <script src="js/controllers.js"></script>
+      <script src="js/directives.js"></script>
+      <script src="js/services.js"></script>
+      <script src="js/filters.js"></script>
   </head>
-  <body ng-app="demoApp" ng-controller="mainController">
 
-    <div ng-repeat="user in users | sortByFirstName">
-        <say-hello message="Hello"></say-hello>
-    </div>
+  <body ng-app="demoApp" ng-controller="mainController">
 
     <form ng-submit="addUser()" >
       <input type="text" ng-model="newUser.firstName" placeholder="Give me a first name...">
@@ -16,56 +19,10 @@
       <button type="submit">ADD</button>
     </form>
 
-
-    <script>
-      var demoApp = angular.module("demoApp", []);
-
-      demoApp.controller("mainController", function($scope, userService) {
-        $scope.users = userService.users();
-        $scope.newUser = {};
-        $scope.addUser = function(){
-          userService.add($scope.newUser);
-          $scope.newUser = {};
-        }
-      });
-
-      demoApp.directive("sayHello", function() {
-        return {
-          scope: false,
-          link: function($scope, element, attrs){
-            $scope.message = attrs.message;
-          },
-          template: "<h1> {{[message, user.firstName, user.lastName].join(' ')}}!</h1>"
-        };
-      });
-
-      demoApp.service('userService', function(){
-         var collection = [
-           {firstName: 'Thomas', lastName: 'Ochman'},
-           {firstName: 'Amber', lastName: 'Wilkie'},
-           {firstName: 'Raoul', lastName: 'Diffouo'}
-         ];
-         return {
-           users: function(){
-             return collection;
-           },
-           add: function(object){
-             collection.push(object);
-           }
-         }
-      });
-
-      demoApp.filter('sortByFirstName', function () {
-        return function (array) {
-            function compare(a, b) {
-                return a.firstName.localeCompare(b.firstName)
-            }
-            return array.sort(compare);
-        }
-    });
-
-    </script>
-
+    <div ng-repeat="user in users | sortByFirstName">
+        <say-hello message="Hello"></say-hello>
+    </div>
 
   </body>
+
 </html>
