--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <meta charset="utf-8">
-      <title>Hello World</title>
+    <meta charset="utf-8">
+    <title>Hello World</title>
       <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
       <script src="js/app.js"></script>
       <script src="js/controllers.js"></script>
       <script src="js/directives.js"></script>
       <script src="js/services.js"></script>
       <script src="js/filters.js"></script>
-  </head>
 
+  </head>
   <body ng-app="demoApp" ng-controller="mainController">
+
+  <h2>Enter firstname and lastname:</h2>
 
     <form ng-submit="addUser()" >
       <input type="text" ng-model="newUser.firstName" placeholder="Give me a first name...">
@@ -20,9 +22,10 @@
     </form>
 
     <div ng-repeat="user in users | sortByFirstName">
-        <say-hello message="Hello"></say-hello>
+      <say-hello message="Hello"></say-hello>
     </div>
 
-  </body>
 
+
+  </body>
 </html>
